Apply NotConsensual Cleanthat mutators